FTB-Community/force-app/main/default/objects/FTB_CMT_IntegrationConfiguration__mdt/FTB_CMT_IntegrationConfiguration__mdt.object-meta.xml
<CustomObject>
    <description>Object to configure integration data such as endpoint, className exc.</description>
    <label>Integration Configuration</label>
    <pluralLabel>Integration Configurations</pluralLabel>
</CustomObject>