FTB-Community/force-app/main/default/objects/FTB_CMT_IntegrationConfiguration__mdt/fields/FTB_ClassName__c.field-meta.xml
<CustomField>
    <fullName>FTB_ClassName__c</fullName>
    <label>Class Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>