FTB-Community/force-app/main/default/objects/FTB_CMT_IntegrationConfiguration__mdt/fields/FTB_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>FTB_Endpoint__c</fullName>
    <label>Endpoint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>