FTB-Community/force-app/main/default/objects/FTB_CMT_IntegrationConfiguration__mdt/fields/FTB_EnumService__c.field-meta.xml
<CustomField>
    <fullName>FTB_EnumService__c</fullName>
    <label>Enum Service</label>
    <length>255</length>
    <type>Text</type>
</CustomField>